apps/base/river-data-explorer/_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: river-data
spec:
  rules:
  - host: fix.me
    http:
      paths:
      - backend:
          service:
            name: river-data
            port:
              number: 80
        path: /
        pathType: Prefix
